--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.18.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0"
@@ -15,7 +23,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "commit": "git pull && git add . && git commit && git push",
-    "push": "npm run commit"
+    "push": "npm run commit",
+    "lint": "eslint ./**.js",
+    "lint:fix": "eslint ./**.js --fix"
   },
   "repository": {
     "type": "git",
