--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "commit": "git pull && git add . && git commit && git push",
     "push": "npm run commit",
     "lint": "eslint ./**.js",
-    "lint:fix": "eslint ./**.js --fix"
+    "lint:fix": "eslint ./**.js --fix",
+    "merge-master": "git checkout master && git pull && git merge develop && git push && git checkout develop"
   },
   "repository": {
     "type": "git",
