Adicionadas dependências do Sonar, configurações do Jest e testes

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "formatadores",
-  "version": "0.0.3",
-  "description": "formatadores simples de dados",
+  "version": "0.0.4",
+  "description": "Formatadores simples de dados e funções utilitárias",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
@@ -17,8 +16,12 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sonarjs": "^0.6.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
+    "jest-sonar-reporter": "^2.0.0",
+    "jest-transform-stub": "^2.0.0",
+    "mock-local-storage": "^1.1.17",
     "rollup": "^2.38.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
