Ajustes nas configurações e testes

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "start": "rollup --config --watch",
     "rollup": "rollup --config",
     "prepare": "npm run build",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --config ./jest.config.js",
+    "test:watch": "jest --config ./jest.config.js --watch",
     "commit": "git pull && git add . && git commit && git push",
     "push": "npm run commit",
     "lint": "eslint ./**.js",
