--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest-transform-stub": "^2.0.0",
     "mock-local-storage": "^1.1.17",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.38.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
