--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   ],
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
+  "dependencies": {
+    "rollup": "^2.38.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-jsx": "^1.0.3",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
@@ -38,14 +47,7 @@
     "jest-transform-stub": "^2.0.0",
     "mock-local-storage": "^1.1.17",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rollup": "^2.38.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-jsx": "^1.0.3",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "build": "npm run rollup",
