--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formatadores",
-  "version": "1.3.6",
+  "version": "1.4.1",
   "description": "Formatadores simples de dados e funções utilitárias",
   "keywords": [
     "formatadores",
@@ -13,7 +13,9 @@
     "caracteres",
     "caracteres especiais",
     "utilidades",
-    "utilitários"
+    "utilitários",
+    "url",
+    "query"
   ],
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
@@ -21,6 +23,7 @@
     "gerar-versao": "./gerar-versao.js"
   },
   "dependencies": {
+    "crypto-browserify": "^3.12.0",
     "rollup": "^2.38.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -35,7 +38,7 @@
     "@babel/preset-react": "^7.13.13",
     "@rollup/plugin-json": "^4.1.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.0.6",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.2.0",
     "enzyme": "^3.11.0",
@@ -45,9 +48,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sonarjs": "^0.6.0",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "husky": "^5.2.0",
+    "jest": "^27.0.6",
     "jest-sonar-reporter": "^2.0.0",
     "jest-transform-stub": "^2.0.0",
     "mock-local-storage": "^1.1.17",
@@ -68,6 +71,7 @@
     "lint": "eslint ./**.js",
     "lint:fix": "eslint ./**.js --fix",
     "merge-master": "git checkout master && git pull && git merge develop && git push && git checkout develop",
+    "prepare:husky": "husky install",
     "publish": "git checkout master && npm publish & git checkout develop",
     "push-and-publish": "npm run push && npm run merge-master && npm run publish"
   },
@@ -81,11 +85,6 @@
     "url": "https://github.com/YoguiSan/formatadores/issues"
   },
   "homepage": "https://github.com/YoguiSan/formatadores#readme",
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint:fix & npm run test && npm run build"
-    }
-  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
