--- a/.huskyrc
+++ b/.huskyrc
@@ -1,3 +1,5 @@
-"hooks": {
-  "pre-commit": "npm run lint:fix & npm run test && npm run build"
+{
+  "hooks": {
+    "pre-commit": "npm run lint:fix & npm run test & npm run build"
+  }
 }
