fix(formatadores, index, url): ajustes para evitar crashes

--- a/package.json
+++ b/package.json
@@ -98,5 +98,10 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:fix & npm run test & npm run build"
+    }
   }
 }
