--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formatadores",
-  "version": "1.4.6",
+  "version": "1.5.0",
   "description": "Formatadores simples de dados e funções utilitárias",
   "keywords": [
     "formatadores",
@@ -31,15 +31,16 @@
     "gerar-versao": "./gerar-versao.js"
   },
   "dependencies": {
-    "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "rollup": "^2.38.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-jsx": "^1.0.3",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -49,6 +50,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-jest": "^27.0.6",
     "commitizen": "^4.2.4",
+    "concurrently": "^6.5.0",
     "cz-conventional-changelog": "^3.2.0",
     "enzyme": "^3.11.0",
     "eslint": "^7.18.0",
@@ -66,11 +68,14 @@
     "nock": "^13.0.11",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "rollup-plugin-polyfill-node": "^0.8.0"
   },
   "scripts": {
     "build": "npm run rollup",
     "start": "rollup --config --watch",
+    "start:test": "npm run install:testing-environment && cd src/__test__/testing-environment && npm start",
+    "start:all": "concurrently --kill-others \"npm start\" \"npm run start:test\" --prefix-colors green,yellow",
     "rollup": "rollup --config",
     "prepare": "npm run build",
     "test": "jest --config ./jest.config.js",
@@ -83,8 +88,8 @@
     "prepare:husky": "husky install",
     "publish": "git checkout master && npm publish & git checkout develop",
     "push-and-publish": "npm run push && npm run merge-master && npm run publish",
-    "prepare:all": "npm i npm run prepare:husky && npm run instal::testing-environment",
-    "install:testing-environment": "cd src/__test__/testing-environment && npm i && npm i -S ../../../ && ../../../"
+    "prepare:all": "npm i & npm run prepare:husky & npm run install:testing-environment",
+    "install:testing-environment": "cd src/__test__/testing-environment && npm i && npm i -S ../../../ && cd ../../../"
   },
   "repository": {
     "type": "git",
