--- a/package.json
+++ b/package.json
@@ -87,8 +87,8 @@
     "lint:fix": "eslint ./**.js --fix",
     "merge:master": "git checkout master && git pull && git merge develop && git push && git checkout develop",
     "prepare:husky": "husky install",
-    "publish": "git checkout master && npm publish & git checkout develop",
-    "push:publish": "npm run push && npm run merge:master && npm run publish",
+    "publish:master": "git checkout master && npm publish & git checkout develop",
+    "push:publish": "npm run push && npm run merge:master && npm run publish:master",
     "prepare:all": "npm i & npm run prepare:husky & npm run install:setup-testing-environment",
     "install:test": "cd src/__test__/testing-environment && npm i",
     "i:test": "npm run npm install:test",
