--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formatadores",
-  "version": "1.5.3",
+  "version": "1.5.4",
   "description": "Formatadores simples de dados e funções utilitárias",
   "keywords": [
     "formatadores",
@@ -89,6 +89,7 @@
     "prepare:husky": "husky install",
     "publish:master": "git checkout master && npm publish & git checkout develop",
     "push:publish": "npm run push && npm run merge:master && npm run publish:master",
+    "patch:push": "npm version patch --no-git-tag-version && npm run push && npm run merge:master",
     "prepare:all": "npm i & npm run prepare:husky & npm run install:setup-testing-environment",
     "install:test": "cd src/__test__/testing-environment && npm i",
     "i:test": "npm run npm install:test",
