--- a/package.json
+++ b/package.json
@@ -31,46 +31,43 @@
     "gerar-versao": "./gerar-versao.js"
   },
   "dependencies": {
-    "crypto-browserify": "^3.12.0",
-    "rollup": "^2.38.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-jsx": "^1.0.3",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "uninstall": "^0.0.0"
+    "crypto-browserify": "^3.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.13.13",
-    "@rollup/plugin-json": "^4.1.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
-    "babel-jest": "^27.0.6",
+    "@rollup/plugin-json": "^6.0.1",
+    "@testing-library/jest-dom": "^6.1.4",
+    "babel-jest": "^29.7.0",
     "commitizen": "^4.2.4",
-    "concurrently": "^6.5.0",
+    "concurrently": "^8.2.2",
     "cz-conventional-changelog": "^3.2.0",
-    "enzyme": "^3.11.0",
-    "eslint": "^7.18.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint": "^8.52.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sonarjs": "^0.10.0",
-    "husky": "^5.2.0",
-    "jest": "^27.0.6",
+    "eslint-plugin-sonarjs": "^0.21.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "jest-sonar-reporter": "^2.0.0",
     "jest-transform-stub": "^2.0.0",
     "mock-local-storage": "^1.1.17",
     "nock": "^13.0.11",
-    "node-fetch": "^2.6.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rollup-plugin-polyfill-node": "^0.8.0"
+    "node-fetch": "^3.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup": "^4.1.4",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-jsx": "^1.0.3",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-polyfill-node": "^0.12.0"
   },
   "scripts": {
     "build": "npm run rollup",
